# arba-vrsn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
cmake/config/: package-config.cmake.in
cmake/script/: quick_install.cmake
cmake/scripts/: qtc_conan_install.cmake
example/: CMakeLists.txt  numver_example.cpp  semver_example.cpp  tri_version_example.cpp
example/basic_cmake_project/: CMakeLists.txt  basic_cmake_project.cpp
include/arba/vrsn/: is_compatible_with.hpp  numver.hpp  semantic_version.hpp  semver.hpp  tri_version.hpp  tri_version_tag.hpp  version.hpp.in  vtag.hpp
include/arba/vrsn/_private/: extract_numver.hpp  extract_semantic_version.hpp  extract_semver.hpp  extract_tri_version.hpp
include/arba/vrsn/concepts/: numver.hpp  semantic_version.hpp  semver.hpp  tri_version.hpp
include/arba/vrsn/string/: string_conversion.hpp
test/: CMakeLists.txt  extract_numver_tests.cpp  extract_semantic_version_tests.cpp  extract_semver_tests.cpp  extract_tri_version_tests.cpp  numver_tests.cpp  project_version_tests.cpp  semantic_version_tests.cpp  semver_tests.cpp  tri_version_tag_tests.cpp  tri_version_tests.cpp  vtag_tests.cpp
test_package/: CMakeLists.txt  test_package.cpp
